# dswell

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  dswell.py  pyproject.toml  setup.py  tox.ini
src/dswell/: cli.py  daemon.py
tests/: conftest.py  test_daemon.py  test_dswell.py
