[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dswell"
version = "1.0.0"
description = "A CLI tool which will run a daemon process in background to delete the file/directory after a specific time period"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Prince Roshan", email = "princekrroshan01@gmail.com" }
]
dependencies = [
    "click>=7.0",
    "daemons>=1.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
dswell = "dswell.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dswell"]

[tool.hatch.metadata]
allow-direct-references = true 